<?xml version="1.0"?>
<package>
  <name>rocon_concert</name>
  <version>0.6.11</version>
  <description>
    The concert framework modules.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/rocon_concert</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_concert</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_concert/issues</url>
  <author>Daniel Stonier</author>
  <author>Jihoon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>concert_conductor</run_depend>
  <run_depend>concert_master</run_depend>
  <run_depend>concert_schedulers</run_depend>
  <run_depend>concert_service_link_graph</run_depend>
  <run_depend>concert_service_manager</run_depend>
  <run_depend>concert_service_utilities</run_depend>
  <run_depend>concert_software_farmer</run_depend>
  <run_depend>concert_utilities</run_depend>
  <run_depend>rocon_tf_reconstructor</run_depend>

  <export>
    <metapackage/>
  </export>
</package>

